# pallet-security-framework

./: .gitignore  Cargo.toml  README.md
asset-discovery/: Cargo.toml  README.md  asset-inventory.JSON  example.JSON
asset-discovery/src/: main.rs
auto-test-macro/: Cargo.toml  README.md
auto-test-macro/src/: lib.rs
auto-test-macro/tests/: macro_tests.rs
pallet-test-decl-macro/: Cargo.toml
pallet-test-decl-macro/src/: lib.rs
pallet-test-proc-macro/: Cargo.toml  README.md
pallet-test-proc-macro/src/: lib.rs
pallet-test-proc-macro/tests/: macro_tests.rs
threat-modeling/: Cargo.toml  README.md
threat-modeling/src/: main.rs
threat-modeling/src/utils/: assets.rs  helpers.rs  llm.rs  mod.rs  threats.rs
